--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://www.instagram.com/_ronaldo.ribeiro_/" target="_blank">Ronaldo Ribeiro</a>, sob a orientação do canal <a href="https://www.youtuber.com/cursoemvideo" target="_blank">CursoemVideo</a></p>
+        <p>Site criado por <a href="https://www.instagram.com/_ronaldo.ribeiro_/" target="_blank">Ronaldo Ribeiro</a>, sob a orientação do canal <a href="https://www.youtube.com/cursoemvideo" target="_blank">CursoemVideo</a></p>
     </footer>
 </body>
 </html>
